== 2.0 - 12 November 2008
* Renamed plugin from ActsAsTreeTable to treeTable
* Added appendBranchTo function for easier manipulation of the tree with drag & drop
* Added option 'child_prefix' to allow customisation of the prefix used for node classes (default: 'child-of-')
* Renamed option 'default_state' to 'initialState'
* Changed initialState from 'expanded' to 'collapsed'
* Refactored collapse/expand behavior
* Moved private function bodies to their respective public function

== 1.2 - 3 November 2008
* Added option 'default_state'
* Expose additional functions: collapse, expand and toggleBranch

== 1.1 - 21 October 2008
* Fix JavaScript errors in IE7 due to comma-madness
* Fix collapse/expand behavior in IE7

== 1.0 - 2 October 2008
* Public release